--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+
+    <link rel="icon" type="image/svg+xml" href="./images/lg_white.png" />
+    <title>Slider</title>
     <link rel="stylesheet" href="./style.css" />
     <script src="./app.js" defer></script>
     <link
