--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <button id="next-btn"></button>
     <div class="container">
       <div class="images">
+<!--         image one -->
         <img src="./images/pic1.jpg" alt="" srcset="" />
 
         <img src="./images/pic2.jpg" alt="" srcset="" />
