--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <div class="images">
 <!--         image one -->
         <img src="./images/pic1.jpg" alt="" srcset="" />
+<!--         image two -->
 
         <img src="./images/pic2.jpg" alt="" srcset="" />
         <img src="./images/pic3.jpg" alt="" srcset="" />
