--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <!--         image two -->
 
         <img src="./images/pic2.jpg" alt="" srcset="" />
+<!--         image three -->
         <img src="./images/pic3.jpg" alt="" srcset="" />
       </div>
       <!-- images end -->
